--- a/src/app/views/pages/planing-month/planing-month.component.html
+++ b/src/app/views/pages/planing-month/planing-month.component.html
@@ -50,7 +50,7 @@
                                 <p>{{line.fonction}}</p>
                                 <p></p>
                                 <p></p>
-                                <span *ngIf="line.ispointe" class="badge badge-success">Pointé<i></i></span>
+                                <span *ngIf="line.ispointe" class="badge bg-success">Pointé<i></i></span>
                             
 
                             </div>
