--- a/src/app/views/pages/planing/planing.component.html
+++ b/src/app/views/pages/planing/planing.component.html
@@ -73,7 +73,7 @@
                                 <p>{{line.fonction}}</p>
                                 <p></p>
                                 <p></p>
-
+                                <span *ngIf="line.ispointe" class="badge bg-success">Pointé<i></i></span>
                             </div>
                         </div>
                         <div class="text-center bg-primary"
