--- a/src/app/views/pages/paiement/paiement.component.html
+++ b/src/app/views/pages/paiement/paiement.component.html
@@ -84,7 +84,7 @@
                             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
                               <div class="btn-group">
                                 <button class="btn btn-sm btn-outline-dark" (click)="detail(content,row)">manager</button>
-                                <button class="btn btn-sm btn-outline-success" (click)="printPDF(row)">print</button>
+                                <button class="btn btn-sm btn-outline-success" (click)="sendBulletin(row)">envoyer bulletin</button>
                               </div>
 
                             </ng-template>
