--- a/src/app/views/pages/users/add-user/add-user.component.html
+++ b/src/app/views/pages/users/add-user/add-user.component.html
@@ -177,6 +177,8 @@
       </c-form-check>
     </div>
   </div>
+  <div>
+  </div>
   </div>
   <div class="card-footer text-end">
     <button *ngIf="firstForm" type="button" class="btn btn-success" (click)="nextButton()"><i class="fa fa-arrow-right"></i>         Suivant
