--- a/src/app/views/pages/planing-month/planing-month.component.html
+++ b/src/app/views/pages/planing-month/planing-month.component.html
@@ -23,6 +23,7 @@
                 <th>Employé</th>
                 <th *ngFor="let day of rowHeaders">{{day | date:"EEE'\n'd/M"}}</th>
                 <th>Total heure</th>
+                <th>Total heure suppl</th>
             </thead>
             <tbody>
                 <tr *ngFor="let row of rowModels">
@@ -65,6 +66,7 @@
 
                     </td>
                     <td>{{row.total_heure|number}}</td>
+                    <td>{{row.total_heure_suppl|number}}</td>
                 </tr>
             </tbody>
         </table>
