--- a/src/app/views/pages/heure-suppl/heure-suppl.component.html
+++ b/src/app/views/pages/heure-suppl/heure-suppl.component.html
@@ -33,7 +33,7 @@
             <td>{{row.heureFin}}</td>
             <td>
               <div class="btn-group">
-                    <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row)">Supprimer</button>
+                    <button class="btn btn-sm btn-outline-danger" (click)="openDelete(contentDelete,row.id)">Supprimer</button>
             </div>
             </td>
           </tr>
